[gd_scene load_steps=13 format=3 uid="uid://d1tjmvrjjaiue"]

[ext_resource type="Texture2D" uid="uid://cvyba1cmah3am" path="res://customAssets/button.png" id="1_jlyfr"]
[ext_resource type="Script" path="res://scenes/level_selection.gd" id="1_xtr1o"]
[ext_resource type="Script" path="res://scripts/levelSelectionButton0.gd" id="2_7q6es"]
[ext_resource type="AudioStream" uid="uid://dmvotmss1xln7" path="res://assets/music/level-select-music.wav" id="2_cytvr"]
[ext_resource type="Script" path="res://scripts/levelSelectionButton1.gd" id="3_anfix"]
[ext_resource type="Script" path="res://scenes/shop_selection_button.gd" id="4_pi56j"]
[ext_resource type="Script" path="res://scripts/level_2.gd" id="4_tfh5p"]
[ext_resource type="Script" path="res://scenes/levelSelectionButton3.gd" id="7_mcddp"]
[ext_resource type="Script" path="res://scripts/level_4.gd" id="8_3fa05"]
[ext_resource type="Script" path="res://scripts/save_game.gd" id="9_prjw7"]
[ext_resource type="Script" path="res://scripts/button_to_main_menu.gd" id="10_ndf8q"]

[sub_resource type="GDScript" id="GDScript_6qdjr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xtr1o")

[node name="LevelMusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_cytvr")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 461.5
offset_right = -461.5
offset_bottom = -603.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.32549, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Level Selection"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0149192, 1.68458e-07, 0.362697, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -3.0
offset_right = -78.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_direction = 1
layout_mode = 2
script = SubResource("GDScript_6qdjr")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="row1" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="level0" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row1"]
layout_mode = 2
focus_neighbor_top = NodePath("../../main_menu")
focus_neighbor_right = NodePath("../level1")
focus_neighbor_bottom = NodePath("../../row2/Button")
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0
"
icon = ExtResource("1_jlyfr")
script = ExtResource("2_7q6es")

[node name="level1" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row1"]
layout_mode = 2
focus_neighbor_left = NodePath("../level0")
focus_neighbor_top = NodePath("../../main_menu")
focus_neighbor_right = NodePath("../level2")
focus_neighbor_bottom = NodePath("../../row2/Button2")
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "1
"
icon = ExtResource("1_jlyfr")
script = ExtResource("3_anfix")

[node name="level2" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row1"]
layout_mode = 2
focus_neighbor_left = NodePath("../level1")
focus_neighbor_top = NodePath("../../main_menu")
focus_neighbor_right = NodePath("../level3")
focus_neighbor_bottom = NodePath("../../row2/Button3")
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "2
"
icon = ExtResource("1_jlyfr")
script = ExtResource("4_tfh5p")

[node name="level3" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row1"]
layout_mode = 2
focus_neighbor_left = NodePath("../level2")
focus_neighbor_top = NodePath("../../main_menu")
focus_neighbor_right = NodePath("../level4")
focus_neighbor_bottom = NodePath("../../row2/Button4")
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "3
"
icon = ExtResource("1_jlyfr")
script = ExtResource("7_mcddp")

[node name="level4" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../level3")
focus_neighbor_top = NodePath("../../main_menu")
focus_neighbor_bottom = NodePath("../../row2/Button5")
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "4
"
icon = ExtResource("1_jlyfr")
script = ExtResource("8_3fa05")

[node name="row2" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "5
"
icon = ExtResource("1_jlyfr")

[node name="Button2" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "6
"
icon = ExtResource("1_jlyfr")

[node name="Button3" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "7
"
icon = ExtResource("1_jlyfr")

[node name="Button4" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "8
"
icon = ExtResource("1_jlyfr")

[node name="Button5" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "9
"
icon = ExtResource("1_jlyfr")

[node name="row3" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "10
"
icon = ExtResource("1_jlyfr")

[node name="Button2" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "11
"
icon = ExtResource("1_jlyfr")

[node name="Button3" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "12
"
icon = ExtResource("1_jlyfr")

[node name="Button4" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/row3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "13"
icon = ExtResource("1_jlyfr")

[node name="Button5" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84024, 0.324211, 0, 1)
theme_override_font_sizes/font_size = 32
text = "SHOP
"
icon = ExtResource("1_jlyfr")
script = ExtResource("4_pi56j")

[node name="save" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "SAVE GAME"
script = ExtResource("9_prjw7")

[node name="main_menu" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../row1/level0")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"
script = ExtResource("10_ndf8q")

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/save" to="MarginContainer/CenterContainer/VBoxContainer/save" method="_on_pressed"]
